last push before starting the front end (increasing sonarqube and tests to 80%